Add: Añadir implementacion de front con streamlit

--- a/RecomenderMovie.ipynb
+++ b/RecomenderMovie.ipynb
@@ -3503,12 +3503,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ce51b67a",
+   "metadata": {},
+   "source": [
+    "Guardar modelo para poder implementarlo en otro entorno"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a8d813bc",
+   "execution_count": 219,
+   "id": "6d527e2f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pickle\n",
+    "pickle.dump(movies_new, open('movies.pkl', 'wb')) #informacion de las peliculas\n",
+    "pickle.dump(similarity, open('similarity.pkl', 'wb')) #informacion de la similitud"
+   ]
   }
  ],
  "metadata": {
